# esp32-calc

./: .clangd  .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  calculator.h  display.cpp  display.h  helloWorld.c  main.c  main.cpp  program.cpp  program.h
main/event/: event.cpp  event.h  key_event.cpp  key_event.h
